# df_explorer

./: .gitignore  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg
df_explorer/: app.py
df_explorer/shared/: style.css
df_explorer/templates/: index.html
df_uploader/: setup.cfg
df_uploader/df_uploader/: df_uploader.py
tb_explorer/: app.py  tb_uploader.py  utils.py  werk.py
tb_explorer/shared/: debugger.js  style.css
tb_explorer/templates/: index.html
