[metadata]
name = tb_explorer
description = "Traceback explorer"
version = 0.0.4

[options]
packages = find:
include_package_data = true
install_requires =
    pandas<0.21
    psutil
    docopt
    joblib==0.11
    flask==0.12.2
    werkzeug==0.12.2

[options.entry_points]
console_scripts =
    tb-explorer = tb_explorer.app:main
